--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+<header class="site-header">
+  <h1 class="h --l">SVGeoStack Generator</h1>
+</header>
 <main>
 	<div id="output" class="js-output output"></div>
 	<div class="controls">
@@ -41,21 +44,19 @@
         prev
       </span>
     </button>
-
 			<button class="js-next hist__btn hist__btn-next u-hidden" aria-label="next svg in history"><span class="btn__text">
     next
     </span></button>
 		</section>
 	</div>
 </main>
-
+<footer class="site-footer">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia aspernatur necessitatibus aperiam beatae eaque distinctio ullam dolorem repellat ab? Illum sed porro eligendi consequatur fugiat aliquam, rem reiciendis doloremque?</p>
+</footer>
 <!-- hidden input to grab value of svg -->
 <input type="text" id="svg-code" class="sr-only" tabindex="-1" aria-hidden="true">
-
 <!-- updates changes for screenreader users updates  -->
 <p class="js-status sr-only" aria-live="assertive"></p>
-  <script src="./../node_modules/clipboard/dist/clipboard.min.js"></script>
-
-  <script src="js/app.js"></script>
+<script src="js/app.js"></script>  
 </body>
 </html>
