--- a/src/index.html
+++ b/src/index.html
@@ -1,62 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="description" content="Randomly generated geometric stacked SVGs">
+	<title>SVGeoStack Generator</title>
+	<link rel="icon" type="image/png" href="./assets/favicon.png">
+	<link rel="mask-icon" href="./assets/favicon-mask.svg" color="#1f3ee0">
+	<link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
+	<meta property="og:title" content="SVGeoStack Generator">
+	<meta property="og:url" content="https://svgeostack.netlify.com/">
+	<meta property="og:type" content="website">
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:creator" content="@meowwwls" />
+	<meta name="twitter:site" content="@meowwwls" />
+	<meta name="twitter:title" content="SVGeoStack Generator" />
+	<meta name="twitter:description" content="Randomly generated geometric stacked SVGs" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:500|Roboto+Mono" rel="stylesheet">
+
 </head>
+
 <body>
-<header class="site-header">
-  <h1 class="h --l">SVGeoStack Generator</h1>
-</header>
-<main>
-	<div id="output" class="js-output output"></div>
-	<div class="controls">
-		<section class="svg__opts">
-			<h2 class="h --m">
-				SVG
-			</h2>
-			<button class="js-generate svg__generate new" aria-label="generate new SVG">Generate</button>
-			<div class="svg__current">
-				<button class="js-dl svg__current-btn" aria-label="download current SVG"><svg width="100" height="100" id="icon-download" class="icon" viewBox="0 0 24 24" aria-hidden="true">
-  <title>download</title>
-  <path  class="download-bottom" d="M21 14c-0.6 0-1 0.4-1 1v4c0 0.6-0.4 1-1 1h-14c-0.6 0-1-0.4-1-1v-4c0-0.6-0.4-1-1-1s-1 0.4-1 1v4c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3v-4c0-0.6-0.4-1-1-1z"></path>
-  <path class="download-top" d="M11.3 15.7c0.1 0.1 0.2 0.2 0.3 0.2 0.1 0.1 0.3 0.1 0.4 0.1s0.3 0 0.4-0.1c0.1-0.1 0.2-0.1 0.3-0.2l5-5c0.4-0.4 0.4-1 0-1.4s-1-0.4-1.4 0l-3.3 3.3v-9.6c0-0.6-0.4-1-1-1s-1 0.4-1 1v9.6l-3.3-3.3c-0.4-0.4-1-0.4-1.4 0s-0.4 1 0 1.4l5 5z"></path>
-</svg><span class="btn__text">download</span></button>
-				<button class="js-copy svg__current-btn" data-clipboard-target="#svg-code" aria-label="copy markup for current SVG"><svg width="100" height="100" id="icon-code" class="icon" viewBox="0 0 30 28" aria-hidden="true">
-  <title>code</title>
-  <path d="M9.641 21.859l-0.781 0.781c-0.203 0.203-0.516 0.203-0.719 0l-7.281-7.281c-0.203-0.203-0.203-0.516 0-0.719l7.281-7.281c0.203-0.203 0.516-0.203 0.719 0l0.781 0.781c0.203 0.203 0.203 0.516 0 0.719l-6.141 6.141 6.141 6.141c0.203 0.203 0.203 0.516 0 0.719zM18.875 5.187l-5.828 20.172c-0.078 0.266-0.359 0.422-0.609 0.344l-0.969-0.266c-0.266-0.078-0.422-0.359-0.344-0.625l5.828-20.172c0.078-0.266 0.359-0.422 0.609-0.344l0.969 0.266c0.266 0.078 0.422 0.359 0.344 0.625zM29.141 15.359l-7.281 7.281c-0.203 0.203-0.516 0.203-0.719 0l-0.781-0.781c-0.203-0.203-0.203-0.516 0-0.719l6.141-6.141-6.141-6.141c-0.203-0.203-0.203-0.516 0-0.719l0.781-0.781c0.203-0.203 0.516-0.203 0.719 0l7.281 7.281c0.203 0.203 0.203 0.516 0 0.719z"></path>
-</svg><span class="js-code btn__text">copy code</span></button>
-
-			</div>
-		</section>
-
-		<section class="history">
-			<header>
+	<header class="site-header">
+		<h1 class="h --l">SVGeoStack Generator</h1>
+	</header>
+	<main>
+		<div id="output" class="js-output output"></div>
+		<div class="controls">
+			<section class="svg__opts">
 				<h2 class="h --m">
-					History
+					SVG
 				</h2>
-				<p class="js-history history__state"><strong>1</strong> of <strong>1</strong></p>
-			</header>
-			<button class="js-prev hist__btn hist__btn-prev u-hidden" aria-label="previous svg in history">
-      <span class="btn__text">
-        prev
-      </span>
-    </button>
-			<button class="js-next hist__btn hist__btn-next u-hidden" aria-label="next svg in history"><span class="btn__text">
-    next
-    </span></button>
-		</section>
-	</div>
-</main>
-<footer class="site-footer">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia aspernatur necessitatibus aperiam beatae eaque distinctio ullam dolorem repellat ab? Illum sed porro eligendi consequatur fugiat aliquam, rem reiciendis doloremque?</p>
-</footer>
-<!-- hidden input to grab value of svg -->
-<input type="text" id="svg-code" class="sr-only" tabindex="-1" aria-hidden="true">
-<!-- updates changes for screenreader users updates  -->
-<p class="js-status sr-only" aria-live="assertive"></p>
-<script src="js/app.js"></script>  
+				<button class="js-generate svg__generate new" aria-label="generate new SVG">Generate</button>
+				<div class="svg__current">
+					<button class="js-dl svg__current-btn" aria-label="download current SVG">
+						<svg width="100" height="100" id="icon-download" class="icon" viewBox="0 0 24 24" aria-hidden="true">
+							<title>download</title>
+							<path class="download-bottom" d="M21 14c-0.6 0-1 0.4-1 1v4c0 0.6-0.4 1-1 1h-14c-0.6 0-1-0.4-1-1v-4c0-0.6-0.4-1-1-1s-1 0.4-1 1v4c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3v-4c0-0.6-0.4-1-1-1z"></path>
+							<path class="download-top" d="M11.3 15.7c0.1 0.1 0.2 0.2 0.3 0.2 0.1 0.1 0.3 0.1 0.4 0.1s0.3 0 0.4-0.1c0.1-0.1 0.2-0.1 0.3-0.2l5-5c0.4-0.4 0.4-1 0-1.4s-1-0.4-1.4 0l-3.3 3.3v-9.6c0-0.6-0.4-1-1-1s-1 0.4-1 1v9.6l-3.3-3.3c-0.4-0.4-1-0.4-1.4 0s-0.4 1 0 1.4l5 5z"></path>
+						</svg>
+						<span class="btn__text">download</span>
+					</button>
+					<button class="js-copy svg__current-btn" data-clipboard-target="#svg-code" aria-label="copy markup for current SVG">
+						<svg width="100" height="100" id="icon-code" class="icon" viewBox="0 0 30 28" aria-hidden="true">
+							<title>code</title>
+							<path d="M9.641 21.859l-0.781 0.781c-0.203 0.203-0.516 0.203-0.719 0l-7.281-7.281c-0.203-0.203-0.203-0.516 0-0.719l7.281-7.281c0.203-0.203 0.516-0.203 0.719 0l0.781 0.781c0.203 0.203 0.203 0.516 0 0.719l-6.141 6.141 6.141 6.141c0.203 0.203 0.203 0.516 0 0.719zM18.875 5.187l-5.828 20.172c-0.078 0.266-0.359 0.422-0.609 0.344l-0.969-0.266c-0.266-0.078-0.422-0.359-0.344-0.625l5.828-20.172c0.078-0.266 0.359-0.422 0.609-0.344l0.969 0.266c0.266 0.078 0.422 0.359 0.344 0.625zM29.141 15.359l-7.281 7.281c-0.203 0.203-0.516 0.203-0.719 0l-0.781-0.781c-0.203-0.203-0.203-0.516 0-0.719l6.141-6.141-6.141-6.141c-0.203-0.203-0.203-0.516 0-0.719l0.781-0.781c0.203-0.203 0.516-0.203 0.719 0l7.281 7.281c0.203 0.203 0.203 0.516 0 0.719z"></path>
+						</svg>
+						<span class="js-code btn__text">copy code</span>
+					</button>
+
+				</div>
+			</section>
+
+			<section class="history">
+				<header>
+					<h2 class="h --m">
+						History
+					</h2>
+					<p class="js-history history__state">
+						<strong>1</strong> of
+						<strong>1</strong>
+					</p>
+				</header>
+				<button class="js-prev hist__btn hist__btn-prev u-hidden" aria-label="previous svg in history">
+					<span class="btn__text">
+						prev
+					</span>
+				</button>
+				<button class="js-next hist__btn hist__btn-next u-hidden" aria-label="next svg in history">
+					<span class="btn__text">
+						next
+					</span>
+				</button>
+			</section>
+		</div>
+	</main>
+	<footer class="site-footer">
+		<p>Made by
+			<a href="https://twitter.com/meowwwls" class="site-footer__link">Melissa Em</a>. View the
+			<a href="https://github.com/meowwwls/markup-link-harvester" class="site-footer__link">source code</a> on GitHub.</p>
+	</footer>
+	<!-- hidden input to grab value of svg -->
+	<input type="text" id="svg-code" class="sr-only" tabindex="-1" aria-hidden="true">
+	<!-- updates changes for screenreader users updates  -->
+	<p class="js-status sr-only" aria-live="assertive"></p>
+	<script src="js/app.js"></script>
 </body>
 </html>
