Fix footer link

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 	<footer class="site-footer">
 		<p>Made by
 			<a href="https://twitter.com/meowwwls" class="site-footer__link">Melissa Em</a>. View the
-			<a href="https://github.com/meowwwls/markup-link-harvester" class="site-footer__link">source code</a> on GitHub.</p>
+			<a href="https://github.com/meowwwls/svgeostack" class="site-footer__link">source code</a> on GitHub.</p>
 	</footer>
 	<!-- hidden input to grab value of svg -->
 	<input type="text" id="svg-code" class="sr-only" tabindex="-1" aria-hidden="true">
